--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,9 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.479.0",
     "postcss": "^8.5.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-google-places-autocomplete": "^4.1.0",
     "react-router-dom": "^7.3.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.12",
