--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "lucide-react": "^0.479.0",
     "postcss": "^8.5.3",
     "react": "^18.0.0",
